Fixed an issue where scrollbar + tap to paginate in book reader would not allow the user to use mouse to scroll.

--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
@@ -202,9 +202,22 @@ $primary-color: #0062cc;
 
 .right {
     position: fixed;
-    right: 0px;
+    right: 0px; // with scrollbar: 17px
     top: 0px;
-    width: 20%;
+    width: 20%; // with scrollbar: 18%
+    height: 100%;
+    z-index: 2;
+    cursor: pointer;
+    opacity: 0;
+    background: transparent;
+}
+
+// This class pushes the click area to the left a bit to let users click the scrollbar
+.right-with-scrollbar {
+    position: fixed;
+    right: 17px;
+    top: 0px;
+    width: 18%;
     height: 100%;
     z-index: 2;
     cursor: pointer;
